# primer

./: .gitignore  .hlint.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Makefile.wasm32  NOTES.org  README.md  SECURITY.md  bors.toml  bugreport.sh  bugs  cabal.ghcjs.project  cabal.project  ci-benchmarks.nix  flake.nix  fourmolu.yaml  hie.yaml  weeder.dhall  wrangler.toml
primer/: Makefile  Makefile.wasm32  primer.cabal  tt.js  undo-bugs.org
primer-api/: .gitignore  Makefile  Makefile.wasm32  primer-api.cabal
primer-api/exe/: ATS.hs  Main.hs  Serve.hs  Swagger.hs
primer-api/src/: Server.hs  Types.hs
primer-api/src/Primer/: API.hs
primer-api/src/Primer/API/: EdgeFlavor.hs  NodeFlavor.hs  RecordPair.hs
primer-api/test/Tests/: API.hs  Database.hs  Undo.hs
primer-api/test/outputs/APITree/: Expr  Type
primer-api/testlib/Primer/API/Test/: Util.hs
primer-benchmark/: Makefile  README.md  primer-benchmark.cabal
primer-benchmark/bench/: Main.hs
primer-benchmark/fixtures/: sayHello.edits
primer-benchmark/mkfixture/: Main.hs
primer-benchmark/src/: Benchmarks.hs  Main.hs
primer-benchmark/test/: Main.hs
primer-eval/: primer-eval.cabal
primer-eval/src/Primer/: Eval.hs
primer-eval/src/Primer/Eval/: API.hs  Ann.hs  App.hs  Inline.hs  NormalOrder.hs
primer-eval/test/Tests/: EvalFull.hs  Serialization.hs
primer-eval/test/Tests/Eval/: Utils.hs
primer-eval/test/Tests/Prelude/: Logic.hs  Polymorphism.hs  Utils.hs
primer-miso/: .gitignore  Makefile  Makefile.wasm32  README.md  build-frontend.sh  package-lock.json  package.json  primer-miso.cabal  rspack.config.mjs
primer-miso-ui/: .gitignore  Makefile  Makefile.wasm32  build-demo.sh  primer-miso-ui.cabal
primer-miso-ui/exe/: Main.hs
primer-miso-ui/src/Primer/Miso/: UI.hs
primer-miso-ui/src/Primer/Miso/UI/: Button.hs
primer-miso-ui/static/: index.html  index.js
primer-miso/exe/: Main.hs
primer-miso/frontend/: index.html  index.js  style.css
primer-miso/src/: Main.hs
primer-miso/src/Primer/: Miso.hs
primer-miso/src/Primer/Miso/: Colors.hs  Layout.hs  Util.hs
primer-rel8/: Makefile  primer-rel8.cabal
primer-rel8/src/Primer/Database/: Rel8.hs
primer-rel8/src/Primer/Database/Rel8/: OrphanInstances.hs  Orphans.hs  Rel8Db.hs  (+1 more)
primer-rel8/test/: Test.hs  TestUtils.hs
primer-rel8/test/Tests/: DeleteSession.hs  FindSessions.hs  InsertSession.hs  ListSessions.hs  QuerySessionId.hs  UpdateSessionApp.hs  UpdateSessionName.hs
primer-selda/: Makefile.wasm32  primer-selda.cabal
primer-selda/src/Primer/Database/: Selda.hs
primer-selda/test/: Test.hs
primer-selda/test/Tests/: DeleteSession.hs  FindSessions.hs  InsertSession.hs  ListSessions.hs  QuerySessionId.hs  UpdateSessionApp.hs  UpdateSessionName.hs
primer-service/: Makefile  primer-service.cabal
primer-service/exe/: Main.hs
primer-service/exe-client/: Main.hs
primer-service/exe-openapi/: Main.hs
primer-service/exe-replay/: Main.hs
primer-service/exe-server/: Main.hs
primer-service/src/Primer/: Client.hs  Finite.hs  OpenAPI.hs  Pagination.hs  Server.hs
primer-service/src/Primer/Servant/: API.hs  OpenAPI.hs  Types.hs
primer-service/src/Servant/OpenApi/: OperationId.hs
primer-service/test/Tests/: OpenAPI.hs  Pagination.hs
primer-service/test/outputs/OpenAPI/: openapi.json
primer/src/: Foreword.hs
primer/src/Control/Monad/: Fresh.hs  NestedError.hs
primer/src/Primer/: API.hs  Action.hs  App.hs  Builtins.hs  Core.hs  Database.hs  Def.hs  Editable.hs  Eval.hs  EvalFull.hs  EvalFullInterp.hs  EvalFullStep.hs  Examples.hs  Import.hs  JSON.hs  Level.hs  Log.hs  Module.hs  Name.hs  Prelude.hs  Pretty.hs  Primitives.hs  Questions.hs  Refine.hs  Subst.hs  TypeDef.hs  Typecheck.hs  UUIDv4.hs  Unification.hs  Utils.hs  Zipper.hs  ZipperCxt.hs
primer/src/Primer/API/: NodeFlavor.hs  RecordPair.hs
primer/src/Primer/Action/: Actions.hs  Available.hs  Errors.hs  Movement.hs  Priorities.hs  ProgAction.hs  ProgError.hs
primer/src/Primer/App/: Base.hs  Core.hs  Utils.hs
primer/src/Primer/Builtins/: DSL.hs
primer/src/Primer/Core/: DSL.hs  Fresh.hs  Meta.hs  Transform.hs  Type.hs  Utils.hs
primer/src/Primer/Def/: Utils.hs
primer/src/Primer/Eval/: Ann.hs  Beta.hs  Bind.hs  Case.hs  Detail.hs  EvalError.hs  Forall.hs  Inline.hs  Let.hs  NormalOrder.hs  Prim.hs  Push.hs  Redex.hs  Utils.hs
primer/src/Primer/Name/: Fresh.hs
primer/src/Primer/Prelude/: Integer.hs  Logic.hs  Polymorphism.hs  Utils.hs
primer/src/Primer/Primitives/: DSL.hs  PrimDef.hs
primer/src/Primer/Typecheck/: Cxt.hs  KindError.hs  Kindcheck.hs  SmartHoles.hs  TypeError.hs  Utils.hs
primer/src/Primer/Zipper/: Nested.hs  Type.hs
primer/test/: Test.hs  TestM.hs  TestUtils.hs
primer/test/Tests/: API.hs  Action.hs  AlphaEquality.hs  App.hs  Database.hs  Eval.hs  EvalFull.hs  EvalFullInterp.hs  EvalFullStep.hs  Examples.hs  FreeVars.hs  Import.hs  Module.hs  NullDb.hs  Pretty.hs  Primitives.hs  Prog.hs  Question.hs  Questions.hs  Refine.hs  Serialisation.hs  Serialization.hs  Shadowing.hs  Subst.hs  Transform.hs  Typecheck.hs  Undo.hs  Unification.hs  Uniplate.hs  Utils.hs  Zipper.hs
primer/test/Tests/Action/: Available.hs  Capture.hs  Prog.hs
primer/test/Tests/Eval/: Utils.hs
primer/test/Tests/Prelude/: Integer.hs  Logic.hs  Polymorphism.hs  TypeCheck.hs  Utils.hs
primer/test/Tests/Zipper/: BindersAbove.hs
primer/test/fixtures/: action.json  def.json  edit_response_2.json  movement.json  prog.json  progerror.json  selection.json  typeDef.json  typecache.json  typecacheboth.json
primer/test/outputs/: pretty
primer/test/outputs/APITree/: Expr  Type
primer/test/outputs/fixtures/: kind.json  prog.json  progaction.json  typeDef.json
primer/test/outputs/serialization/: action.json  actionerror.json  def.json  edit_response_1.json  edit_response_2.json  eval_response.json  expr.json  id.json  kind.json  log.json  name.json  prim_char.json  prim_int.json  prog.json  progaction.json  selection.json  type.json  typeDef.json  typecacheboth.json
primer/testlib/Primer/Test/: App.hs  Eval.hs  Expected.hs  Expr.hs  TestM.hs  Util.hs
(+140 files in other folders)
