cabal-version: 2.4
name:          primer-api
version:       0.7.0.0
license:       AGPL-3.0-or-later
license-file:  COPYING
copyright:     (c) 2021 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:
  A playground for working out how to document an api and export types and docs nicely

executable swagger
  default-language:   Haskell2010
  hs-source-dirs:     exe
  main-is:            Swagger.hs
  default-extensions:
    DataKinds
    OverloadedLabels
    OverloadedStrings
    TypeOperators

  build-depends:
    , aeson-pretty      >=0.8.8    && <0.8.9
    , base              >=4.12     && <=4.16
    , bytestring        >=0.10.8.2 && <=0.12
    , openapi3          >=3.1.0    && <3.1.1
    , optics            >=0.4      && <=0.5
    , primer-api
    , servant-openapi3  >=2.0.1.2  && <2.0.1.3

executable serve
  default-language:   Haskell2010
  hs-source-dirs:     exe
  main-is:            Serve.hs
  default-extensions:
    DataKinds
    OverloadedLabels
    OverloadedStrings
    TypeOperators

  build-depends:
    , base              >=4.12    && <=4.16
    , openapi3          >=3.1.0   && <3.1.1
    , optics            >=0.4     && <=0.5
    , primer-api
    , servant-openapi3  >=2.0.1.2 && <2.0.1.3
    , servant-server    >=0.18.3  && <0.18.4
    , warp              >=3.3.17  && <3.3.18

executable ats
  default-language:   Haskell2010
  hs-source-dirs:     exe
  main-is:            ATS.hs
  default-extensions:
    DataKinds
    OverloadedLabels
    OverloadedStrings
    TypeOperators

  build-depends:
    , aeson             >=1.5.2.0  && <=1.6
    , aeson-pretty      >=0.8.8    && <0.8.9
    , aeson-typescript  >=0.3.0.1  && <0.3.0.2
    , base              >=4.12     && <=4.16
    , bytestring        >=0.10.8.2 && <=0.12
    , openapi3          >=3.1.0    && <3.1.1
    , optics            >=0.4      && <=0.5
    , primer-api
    , servant-openapi3  >=2.0.1.2  && <2.0.1.3

library
  exposed-modules:
    Server
    Types

  hs-source-dirs:     src
  other-modules:
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedLabels
    OverloadedStrings
    ScopedTypeVariables
    TypeOperators

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths

  build-depends:
    , aeson              >=1.5.2.0  && <=1.6
    , base               >=4.12     && <=4.16
    , bytestring         >=0.10.8.2 && <=0.12
    , containers         >=0.6.0.1  && <=0.7
    , deriving-aeson     >=0.2      && <=0.3
    , exceptions         >=0.10.4   && <=0.11
    , generic-optics     >=2.0      && <=2.3
    , list-t             >=1.0      && <=1.1
    , megaparsec         >=8.0.0    && <=9.2
    , mtl                >=2.2.2    && <=2.3
    , openapi3           >=3.1.0    && <3.1.1
    , optics             >=0.4      && <=0.5
    , protolude          ^>=0.3
    , recursion-schemes  >=5.1.3    && <=5.3
    , semigroups         >=0.19.1   && <=0.20
    , servant            >=0.18.3   && <0.18.4
    , servant-openapi3   >=2.0.1.2  && <2.0.1.3
    , stm                >=2.5      && <=2.6
    , stm-containers     >=1.1      && <=1.3
    , text               >=1.2.3.2  && <=1.3
    , transformers       >=0.5.6.2  && <=0.7
    , uniplate           >=1.6      && <=1.7
    , uuid               >=1.3      && <=1.4
