cabal-version: 3.0
name:          primer-eval
version:       0.7.2.0
license:       AGPL-3.0-or-later
license-file:  COPYING
copyright:     (c) 2023 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:      Evaluators for Primer programs

library
  exposed-modules:
    Primer.Eval
    Primer.Eval.API
    Primer.Eval.App
    Primer.EvalFull

  hs-source-dirs:     src
  other-modules:
    Primer.Eval.Ann
    Primer.Eval.Beta
    Primer.Eval.Bind
    Primer.Eval.Case
    Primer.Eval.Detail
    Primer.Eval.EvalError
    Primer.Eval.Inline
    Primer.Eval.Let
    Primer.Eval.NormalOrder
    Primer.Eval.Prim
    Primer.Eval.Redex

  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths

  build-depends:
    , aeson                        >=2.0      && <2.2
    , assoc                        ^>=1.1
    , base                         >=4.12     && <4.18
    , bytestring                   >=0.10.8.2 && <0.12.0
    , containers                   >=0.6.0.1  && <0.7.0
    , deriving-aeson               >=0.2      && <0.3.0
    , exceptions                   >=0.10.4   && <0.11.0
    , extra                        >=1.7.10   && <1.8.0
    , generic-optics               >=2.0      && <2.3.0
    , list-t                       >=1.0      && <1.1.0
    , logging-effect               ^>=1.4
    , megaparsec                   >=8.0.0    && <9.4
    , mmorph                       ^>=1.2.0
    , mtl                          >=2.2.2    && <2.4.0
    , optics                       >=0.4      && <0.5.0
    , prettyprinter                >=1.7.1    && <1.8.0
    , prettyprinter-ansi-terminal  >=1.1.3    && <1.2.0
    , primer                       ^>=0.7.2
    , protolude                    >=0.3.1    && <0.4.0
    , recursion-schemes            >=5.1.3    && <5.3.0
    , semigroups                   >=0.20     && <0.21.0
    , stm                          >=2.5      && <2.6.0
    , stm-containers               >=1.1      && <1.3.0
    , text                         ^>=2.0
    , time                         >=1.11     && <1.13
    , transformers                 >=0.5.6.2  && <0.7.0
    , uniplate                     >=1.6      && <1.7.0
    , uuid                         ^>=1.3.15

test-suite primer-eval-test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test
  other-modules:
    Tests.Eval
    Tests.Eval.Utils
    Tests.EvalFull
    Tests.Prelude.Integer
    Tests.Prelude.Logic
    Tests.Prelude.Polymorphism
    Tests.Prelude.Utils

  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedLists
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths -threaded
    -rtsopts -with-rtsopts=-N

  if impl(ghcjs)
    buildable: False

  else
    build-depends:
      , aeson
      , aeson-pretty                 ^>=0.8.9
      , async                        ^>=2.2.4
      , base
      , bytestring
      , containers
      , exceptions
      , extra
      , filepath
      , generic-optics
      , hedgehog
      , hedgehog-classes             ^>=0.2.5.3
      , hspec                        ^>=2.10
      , hspec-megaparsec             ^>=2.2.0
      , logging-effect
      , mmorph
      , mtl
      , optics
      , pretty-simple                ^>=4.1
      , prettyprinter
      , prettyprinter-ansi-terminal
      , primer
      , protolude
      , stm
      , stm-containers
      , tasty                        ^>=1.4.2.1
      , tasty-discover
      , tasty-golden                 ^>=2.3.5
      , tasty-hedgehog
      , tasty-hunit
      , text
      , time
      , transformers
      , uniplate
      , uuid

--TODO This currently breaks with haskell.nix, so we manually add it to `flake.nix` instead.
-- See: https://github.com/input-output-hk/haskell.nix/issues/839
-- build-tool-depends: tasty-discover:tasty-discover ^>=5.0
