cabal-version: 2.4
name:          primer-rel8
version:       0.7.2.0
license:       AGPL-3.0-or-later
license-file:  COPYING
copyright:     (c) 2021 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:      Rel8 bindings for the Primer database
category:      Database

library
  exposed-modules:
    Primer.Database.Rel8
    Primer.Database.Rel8.Orphans
    Primer.Database.Rel8.Rel8Db
    Primer.Database.Rel8.Schema

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths

  build-depends:
    , aeson       >=2.0      && <=2.1
    , base        >=4.12     && <=4.17
    , bytestring  >=0.10.8.2 && <=0.12
    , containers  >=0.6.0.1  && <=0.7
    , exceptions  >=0.10.4   && <=0.11
    , hasql       ^>=1.6
    , mtl         >=2.2.2    && <=2.4
    , primer      ^>=0.7.2
    , rel8        ^>=1.4
    , text        >=1.2.3.2  && <=1.3
    , uuid        ^>=1.3

test-suite primer-rel8-test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test
  other-modules:
    Tests.InsertSession
    Tests.ListSessions
    Tests.QuerySessionId
    Tests.UpdateSessionApp
    Tests.UpdateSessionName
    TestUtils

  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths
    -threaded -rtsopts -with-rtsopts=-N

  if impl(ghcjs)
    buildable: False

  else
    build-depends:
      , aeson
      , base
      , containers
      , exceptions
      , filepath
      , hasql
      , port-utils        ^>=0.2.1
      , postgres-options  ^>=0.2
      , primer
      , primer-rel8
      , rel8
      , tasty             ^>=1.4.2.1
      , tasty-discover    ^>=4.2.4
      , tasty-hunit       ^>=0.10.0
      , temporary         ^>=1.3
      , text
      , tmp-postgres      ^>=1.34.1.0
      , typed-process     ^>=0.2.8
      , utf8-string       ^>=1.0
      , uuid

--TODO This currently breaks with haskell.nix, so we manually add it to `flake.nix` instead.
-- See: https://github.com/input-output-hk/haskell.nix/issues/839
-- build-tool-depends: tasty-discover:tasty-discover ^>=4.2.4
