cabal-version: 3.0
name:          primer-rel8
version:       0.7.2.0
license:       AGPL-3.0-or-later
license-file:  COPYING
copyright:     (c) 2023 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:      Rel8 bindings for the Primer database
category:      Database

library
  exposed-modules:
    Primer.Database.Rel8
    Primer.Database.Rel8.Orphans
    Primer.Database.Rel8.Rel8Db
    Primer.Database.Rel8.Schema

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths

  build-depends:
    , aeson           >=2.0      && <2.2
    , base            >=4.12     && <4.18
    , bytestring      >=0.10.8.2 && <0.12.0
    , containers      >=0.6.0.1  && <0.7.0
    , exceptions      >=0.10.4   && <0.11.0
    , hasql           ^>=1.6
    , hasql-pool      ^>=0.8.0.3
    , logging-effect  ^>=1.3.13
    , mtl             >=2.2.2    && <2.4.0
    , optics          >=0.4      && <0.5.0
    , primer          ^>=0.7.2
    , rel8            ^>=1.4
    , text            ^>=2.0
    , time            >=1.11     && <1.14
    , uuid            ^>=1.3.15

library primer-rel8-testlib
  visibility:         public
  exposed-modules:    Primer.Database.Rel8.Test.Util
  hs-source-dirs:     testlib
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths

  build-depends:
    , base
    , bytestring
    , hasql
    , hasql-pool
    , logging-effect
    , port-utils        ^>=0.2.1
    , postgres-options  ^>=0.2
    , primer
    , primer-rel8
    , rel8
    , temporary         ^>=1.3
    , time
    , tmp-postgres      ^>=1.34.1.0
    , typed-process     >=0.2.8     && <0.2.11
    , utf8-string       ^>=1.0
    , uuid

test-suite primer-rel8-test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test
  other-modules:
    Tests.DeleteSession
    Tests.InsertSession
    Tests.ListSessions
    Tests.QuerySessionId
    Tests.UpdateSessionApp
    Tests.UpdateSessionName

  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths
    -threaded -rtsopts -with-rtsopts=-N

  if impl(ghcjs)
    buildable: False

  else
    build-depends:
      , aeson
      , base
      , containers
      , exceptions
      , filepath
      , hasql
      , hasql-pool
      , logging-effect
      , primer-rel8:{primer-rel8, primer-rel8-testlib}
      , primer:{primer, primer-testlib}
      , rel8
      , tasty                                           ^>=1.4.2.1
      , tasty-discover                                  ^>=5
      , tasty-hunit                                     ^>=0.10.0
      , text
      , time
      , uuid

--TODO This currently breaks with haskell.nix, so we manually add it to `flake.nix` instead.
-- See: https://github.com/input-output-hk/haskell.nix/issues/839
-- build-tool-depends: tasty-discover:tasty-discover ^>=5
