cabal-version: 3.0
name:          primer-selda
version:       0.7.2.0
license:       AGPL-3.0-or-later
license-file:  COPYING
copyright:     (c) 2023 Hackworth Ltd
maintainer:    src@hackworthltd.com
author:        Hackworth Ltd <src@hackworthltd.com>
stability:     experimental
synopsis:      Selda bindings for the Primer database
category:      Database

library
  exposed-modules:
    Primer.Database.Selda
    Primer.Database.Selda.SQLite

  hs-source-dirs:     src
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths

  build-depends:
    , aeson           >=2.0      && <2.2
    , base            >=4.12     && <4.18
    , bytestring      >=0.10.8.2 && <0.12.0
    , containers      >=0.6.0.1  && <0.7.0
    , logging-effect  ^>=1.4
    , mtl             >=2.2.2    && <2.4.0
    , primer          ^>=0.7.2
    , selda           ^>=0.5.2.1
    , selda-sqlite    ^>=0.1.7.2
    , text            ^>=2.0
    , time            >=1.11     && <1.13
    , uuid            ^>=1.3.15

library primer-selda-testlib
  visibility:         public
  exposed-modules:    Primer.Database.Selda.Test.Util
  hs-source-dirs:     testlib
  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths

  build-depends:
    , aeson
    , base
    , bytestring
    , logging-effect
    , primer
    , primer-selda
    , selda
    , selda-sqlite
    , temporary       ^>=1.3
    , time
    , typed-process   ^>=0.2.11
    , uuid

test-suite primer-selda-test
  type:               exitcode-stdio-1.0
  main-is:            Test.hs
  hs-source-dirs:     test
  other-modules:
    Tests.DeleteSession
    Tests.FindSessions
    Tests.InsertSession
    Tests.ListSessions
    Tests.QuerySessionId
    Tests.UpdateSessionApp
    Tests.UpdateSessionName

  default-language:   GHC2021
  default-extensions:
    NoImplicitPrelude
    DataKinds
    DerivingStrategies
    DerivingVia
    LambdaCase
    OverloadedStrings

  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints
    -Wmissing-deriving-strategies -fhide-source-paths -threaded
    -rtsopts -with-rtsopts=-N

  if impl(ghcjs)
    buildable: False

  else
    build-depends:
      , aeson
      , base
      , containers
      , exceptions
      , filepath
      , logging-effect
      , primer-selda:{primer-selda, primer-selda-testlib}
      , primer:{primer, primer-testlib}
      , selda
      , selda-sqlite
      , tasty                                              ^>=1.4.2.1
      , tasty-discover                                     ^>=5.0
      , tasty-hunit                                        ^>=0.10.0
      , text
      , time
      , uuid

--TODO This currently breaks with haskell.nix, so we manually add it to `flake.nix` instead.
-- See: https://github.com/input-output-hk/haskell.nix/issues/839
-- build-tool-depends: tasty-discover:tasty-discover ^>=5.0
